package saka1029.stack;

public interface Comparable extends Value {
    
    int compareTo(Instruction r);

}
