package saka1029.stack;

public interface Instruction {
    
    void execute(Context context);

}
