package saka1029.stack;

import java.util.Iterator;
import java.util.NoSuchElementException;

/**
 * インターフェースにした場合、
 * hashCode(), equals(), toString()を
 * デフォルトメソッドとして実装することができない。
 */
public abstract class List implements Instruction, Iterable<Instruction> {

    public abstract Sequence sequence();

    @Override
    public Iterator<Instruction> iterator() {
        return new Iterator<Instruction>() {
            final Sequence it = sequence();
            Instruction next = it.next();
            
            @Override
            public boolean hasNext() {
                return next != null;
            }
            
            @Override
            public Instruction next() {
                if (next == null)
                    throw new NoSuchElementException();
                Instruction result = next;
                next = it.next();
                return result;
            }
        };
    }

    public static final List NIL = new List() {
        @Override
        public Sequence sequence() {
            return () -> null;
        }
    };
    
    /**
     * 引数のIterableを直接参照するListを返す点に注意する。
     * (引数のIterableが変更されると返すListも同様に変更される)
     */
    public static List of(Iterable<Instruction> iterable) {
        return new List() {
            @Override
            public Sequence sequence() {
                Iterator<Instruction> iterator = iterable.iterator();
                return () -> iterator.hasNext() ? iterator.next() : null;
            }
        };
    }

    public static List append(List... lists) {
        return new List() {
            int index = 0;
            Sequence sequence = advance();

            Sequence advance() {
                if (index < lists.length)
                    return lists[index++].sequence();
                return null;
            }

            @Override
            public Sequence sequence() {
                return new Sequence() {
                    @Override
                    public Instruction next() {
                        while (sequence != null) {
                            Instruction current = sequence.next();
                            if  (current != null)
                                return current;
                            sequence = advance();
                        }
                        return null;
                    }
                };
            }
        };
    }

    @Override
    public void execute(Context context) {
        context.instruction(sequence());
    }

    public int size() {
        Sequence it = sequence();
        int size = 0;
        while (it.next() != null)
            ++size;
        return size;
    }

    @Override
    public int hashCode() {
        int hash = 17;
        Sequence it = sequence();
        for (Instruction i = it.next(); i != null; i = it.next())
            hash = hash * 31 + i.hashCode();
        return hash;
    }

    @Override
    public boolean equals(Object obj) {
        if (!(obj instanceof List list))
            return false;
        Sequence leftIterator = sequence(), rightIterator = list.sequence();
        Instruction l = leftIterator.next(), r = rightIterator.next();
        for (; l != null && r != null; l = leftIterator.next(), r = rightIterator.next())
            if (!l.equals(r))
                return false;
        if (l == null && r == null)
            return true;
        return false;
    }

    @Override
    public String toString() {
        StringBuilder sb = new StringBuilder("(");
        Sequence it = sequence();
        Instruction e = it.next();
        if (e != null) {
            sb.append(e);
            e = it.next();
        }
        while (e != null) {
            sb.append(" ").append(e);
            e = it.next();
        }
        return sb.append(")").toString();
    }
}
