package saka1029.stack;

public interface Sequence {

    Instruction next();

}
